# water-meter-idf

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
components/flow_detector/: CMakeLists.txt  FlowDetector.cpp  idf_component.yml
components/flow_detector/include/: FlowDetector.h  FlowDetector.hpp  SensorSample.hpp
components/flow_detector/test/: CMakeLists.txt  FlowDetectorDriver.cpp  FlowDetectorTest.cpp  PulseTestSubscriber.cpp  TestFlowDetector.cpp
components/flow_detector/test/include/: FlowDetectorDriver.h  FlowDetectorDriver.hpp  PulseTestSubscriber.hpp  TestFlowDetector.hpp
components/flow_detector/test/testData/: 10points.txt  60cycles.txt  anomaly.txt  biQuadrant.txt  crash.txt  fast.txt  fastThenNoisy.txt  flush.txt  forceNoFit.txt  manyOutliers.txt  manyresets.txt  noise.txt  noiseAtEnd.txt  rawSensorData.txt  singlecycle.txt  slow.txt  slowFast.txt  slowest.txt  verySlow.txt  wrong outliers.txt
components/i2c_bus/: CMakeLists.txt  I2cBus.cpp  Kconfig.projbuild
components/i2c_bus/include/: I2cBus.hpp
components/i2c_bus/test/: CMakeLists.txt  TestI2cBus.cpp  test_i2c_bus.cpp
components/i2c_bus/test/include/: TestI2cBus.hpp  test_i2c_bus.hpp
components/magneto_sensor/: CMakeLists.txt  MagnetoSensor.cpp  MagnetoSensorHmc.cpp  MagnetoSensorQmc.cpp
components/magneto_sensor/include/: MagnetoSensor.hpp  MagnetoSensorHmc.hpp  MagnetoSensorNull.hpp  MagnetoSensorQmc.hpp  SensorData.hpp
components/magneto_sensor/test/: CMakeLists.txt  I2cBusMock.cpp  MagnetoSensorHmcTest.cpp  MagnetoSensorNullTest.cpp  MagnetoSensorQmcTest.cpp  MagnetoSensorTest.cpp  SensorDataTest.cpp  TestMagnetoSensor.cpp  TestMagnetoSensorHmc.cpp  TestMagnetoSensorNull.cpp  TestMagnetoSensorQmc.cpp  TestSensorData.cpp  test_magneto_sensor.cpp  test_magneto_sensor_hmc.cpp  test_magneto_sensor_null.cpp  test_magneto_sensor_qmc.cpp  test_sensor_data.cpp
components/magneto_sensor/test/include/: I2cBusMock.hpp  MagnetoSensorTest.hpp  test_magneto_sensor.hpp
components/pub_sub/: CMakeLists.txt  PubSub.cpp  pub_sub.cpp
components/pub_sub/include/: PubSub.hpp  pub_sub.hpp
components/pub_sub/test/: CMakeLists.txt  TestPubSub.cpp  TestSubscriber.cpp  test_pub_sub.cpp
components/pub_sub/test/include/: TestPubSub.hpp  TestSubscriber.hpp  test_pub_sub.hpp
host_test/: CMakeLists.txt  unit_test_main.cpp
host_test/lib/: CMakeLists.txt  tools.cmake
host_test/mock/: esp_log.cpp  i2c_master.cpp
host_test/mock/include/: esp_err.h  esp_log.h
host_test/mock/include/driver/: i2c_master.h
host_test/mock/include/freertos/: freeRTOS.h  queue.h  semphr.h  task.h
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  idf_component.yml  sdkconfig.defaults
test/main/: CMakeLists.txt  unit_test_main.cpp
